--- a/index.html
+++ b/index.html
@@ -127,11 +127,15 @@
                             </span>
 
                             <span class="home_information">
-                                <i class='bx bx-envelope home_icon'>subashpalvel.ai@gmail.com</i>
+                                <i class='bx bx-envelope home_icon'>
+                                    <a href="mailto:subashpalvel.ai@gmail.com" class="social_link">
+                                    subashpalvel.ai@gmail.com</a></i>
                             </span>
 
                             <span class="home_information">
-                                <i class='bx bx-phone home_icon'>6369344901</i>
+                                <i class='bx bx-phone home_icon'>
+                                    <a href="tel:+916369344901" class="social_link">
+                                    6369344901</a></i>
                             </span>
 
                         </div>
@@ -156,14 +160,14 @@
 
                         <!--------------- LikedLn  --------->
 
-                        <a href="" target="_blank" class="social_link">
-                            <i class='bx bxl-linkedin social_icon'>socialsubash</i>
+                        <a href="https://www.linkedin.com/in/subash-palvel-a58522204" target="_blank" class="social_link">
+                            <i class='bx bxl-linkedin social_icon'>Subash Palvel</i>
                         </a>
 
                         <!--------------- Github  ---------->
 
-                        <a href="" target="_blank" class="social_link">
-                            <i class='bx bxl-github social_icon'>socialsubash</i>
+                        <a href="https://github.com/SUBASHPALVEL" target="_blank" class="social_link">
+                            <i class='bx bxl-github social_icon'>Subash Palvel</i>
                         </a>
 
                     </div>
@@ -323,7 +327,7 @@
                             <div class="experience_data bd-grid">
                                 <h3 class="experience_title">Data Scraper</h3>
                                 <span class="experience_company">Dominattor               | FEB 2022 - MAR 2022</span>
-                                <p class="experience_description">wgeygfybwhbbhdbhqbhbfhbbfbqhjhbfjbjhf</p>
+                                <p class="experience_description">I have scraped several LinkedIn profile and gained web scraping knowledge and experience.</p>
                             </div>
                         </div>
 
@@ -336,7 +340,7 @@
                             <div class="experience_data bd-grid">
                                 <h3 class="experience_title">App Developer </h3>
                                 <span class="experience_company">Smartail | OCT 2021 - PRESENT </span>
-                                <p class="experience_description">wgeygfybwhbbhdbhqbhbfhbbfbqhjhbfjbjhf</p>
+                                <p class="experience_description">I have developed apps using Flutter and Dart. I have worked with GPS tracking and firebase.</p>
                             </div>
                         </div>
 
@@ -351,24 +355,24 @@
 
                     <div class="projects_container bd-grid">
                         <div class="project_content">
-                            <h3 class="project_title">Algotrading</h3>
+                            <h3 class="project_title"><a href="https://github.com/SUBASHPALVEL/Algo-trading-S-P500" >Algotrading</a></h3>
                             <p class="project_description">
-                                Using python to find <br>
-                                <a href="">hwhhqhfbwbhbfhwbf</a>
+                                Using python pandas dataframe to analyse stocks <br>
+                                
                             </p>
                         </div>
 
                         <div class="project_content">
-                            <h3 class="project_title">Algotrading</h3>
+                            <h3 class="project_title"><a href="https://github.com/SUBASHPALVEL/AI-FlappyBird" >AI-FlappyBird</a></h3>
                             <p class="project_description">
-                                Using python to find
+                                Using genetic algorithm and neural networks<br>
                             </p>
                         </div>
 
                         <div class="project_content">
-                            <h3 class="project_title">Algotrading</h3>
+                            <h3 class="project_title"><a href="https://github.com/SUBASHPALVEL/Hospital-Management-System" >Hospital Management System</a></h3>
                             <p class="project_description">
-                                Using python to find
+                                Using java and sql <br>
                             </p>
                         </div>
 
